src/test/ui/compile-fail-migration/match-tag-unary.stderr
error[E0308]: mismatched types
  --> $DIR/match-tag-unary.rs:16:43
   |
LL | fn main() { let x: a = a::A(0); match x { b::B(y) => { } } }
   |                                           ^^^^^^^ expected enum `a`, found enum `b`
   |
   = note: expected type `a`
              found type `b`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
